# shellsweeper

./: CMakeLists.txt  PKGBUILD  README.md  index.html  key.gpg  shellsweeper_1.0.0_amd64.deb  shellsweeper_1.0.2_amd64.deb  shellsweeper_1.0.3_amd64.deb  shellsweeper_1.0.5_amd64.deb
.github/workflows/: release.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
include/: Board.hpp  Cell.hpp  Game.hpp  HighScores.hpp  Renderer.hpp  Settings.hpp
repo/: install.sh
src/: Board.cpp  Cell.cpp  Game.cpp  HighScores.cpp  Renderer.cpp  Settings.cpp  main.cpp
